# flipper

./: .bumpversion.cfg  CHANGELOG.rst  Pipfile  README.md  pyproject.toml
.github/workflows/: test.yml
python/flipper/: app.py  settings.py
python/flipper/controllers/: index.py
python/flipper/static/css/: home.css
python/flipper/templates/: footer.html  header.html  index.html  layout.html  macros.html
python/flipper/tests/: conftest.py  test_flipper.py
python/flipper/uwsgi/: app.py  base.ini  local.ini  production.ini  test.ini
