[tool.poetry]
name = "flipper"
version = "0.1.5dev"
description = "home splash page for SDSS"
authors = ["Brian Cherinka <bcherinka@stsci.edu>"]
license = "BSD-3-Clause"
repository = "https://github.com/sdss/flipper"
packages = [
  { include = "flipper", from = "python" }
]


[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2"
bumpversion = "*"
blinker = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-flask = "*"
pytest-sugar = "^1.0.0"
pytest-cov = "*"
blinker = "^1.4"
